--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,6 @@ blinker==1.4
 click==6.7
 colorama==0.3.9
 Flask==0.12.2
-flask-heroku==0.1.9
 Flask-Mail==0.9.1
 gunicorn==19.7.1
 isort==4.2.15
@@ -13,6 +12,8 @@ lazy-object-proxy==1.3.1
 MarkupSafe==1.0
 mccabe==0.6.1
 pylint==1.8.2
+python-http-client==3.0.0
+sendgrid==5.3.0
 six==1.11.0
 Werkzeug==0.14.1
 wrapt==1.10.11
